packages/swirl-components/src/components/swirl-file-chip/swirl-file-chip.css
:host {
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  background-color: var(--s-background-default);
  border-radius: var(--s-border-radius-sm);
  outline: 1px solid var(--s-border-strong);
  outline-offset: -1px;
}

.file-chip {
  display: flex;
  position: relative;
  align-items: center;
  max-width: 100%;
  min-width: 15rem;
  font-size: var(--s-font-size-sm);
  line-height: var(--s-line-height-sm);
  background-color: transparent;
  padding-top: var(--s-space-8);
  padding-right: var(--s-space-16);
  padding-bottom: var(--s-space-8);
  padding-left: var(--s-space-8);
  gap: var(--s-space-12);
}

.file-chip:hover:not(.file-chip--no-actions):not(.file-chip--loading),
.file-chip:focus-within:not(.file-chip--no-actions):not(.file-chip--loading) {
  @media (--has-hover) {
    &.file-chip--has-preview-action,
    &.file-chip--has-download-action {
      background-color: var(--s-state-hovered);
      cursor: pointer;
    }

    & .file-chip__description {
      opacity: 0;
      pointer-events: none;
    }

    & .file-chip__actions {
      opacity: 1;
      pointer-events: auto;
    }
  }
}

.file-chip__icon {
  display: flex;
  flex-shrink: 0;
  padding: var(--s-space-4);
  background-color: var(--s-decorative-blueberry-surface-subdued);
  border-radius: 50%;
  color: var(--s-decorative-blueberry-text);
}

.file-chip__info {
  display: flex;
  align-items: center;
  gap: var(--s-space-12);
  flex-grow: 1;
  min-width: 0;
}

.file-chip__name {
  font-weight: var(--s-font-weight-semibold);
}

.file-chip__suffix {
  display: inline-flex;
  align-items: center;
  justify-content: flex-end;
  gap: var(--s-space-12);
  flex-grow: 1;
  min-width: fit-content;

  @media (--has-hover) {
    display: inline-grid;
    justify-items: end;
    gap: 0;
  }

  & swirl-button {
    display: inline-flex;
  }
}

.file-chip__description,
.file-chip__actions {
  @media (--has-hover) {
    grid-area: 1 / 1;
  }
}

.file-chip__description {
  color: var(--s-text-subdued);
  font-size: var(--s-font-size-xs);
  line-height: var(--s-line-height-xs);
}

.file-chip__name,
.file-chip__description {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.file-chip__actions {
  display: flex;
  align-items: center;

  @media (--has-hover) {
    opacity: 0;
    pointer-events: none;
  }
}

.file-chip--no-suffix {
  & .file-chip__suffix {
    display: none;
  }
}

.file-chip--has-description {
  & .file-chip__info {
    align-items: baseline;
  }
}

.file-chip--type {
  &-image .file-chip__icon {
    color: var(--s-decorative-kiwi-text);
    background-color: var(--s-decorative-kiwi-surface-subdued);
  }

  &-video .file-chip__icon {
    color: var(--s-decorative-radish-text);
    background-color: var(--s-decorative-radish-surface-subdued);
  }

  &-audio .file-chip__icon {
    color: var(--s-decorative-grape-text);
    background-color: var(--s-decorative-grape-surface-subdued);
  }

  &-pdf .file-chip__icon {
    color: var(--s-decorative-chilli-text);
    background-color: var(--s-decorative-chilli-surface-subdued);
  }

  &-compressed .file-chip__icon {
    color: var(--s-decorative-pumpkin-text);
    background-color: var(--s-decorative-pumpkin-surface-subdued);
  }

  &-document .file-chip__icon {
    color: var(--s-decorative-blueberry-text);
    background-color: var(--s-decorative-blueberry-surface-subdued);
  }

  &-unknown .file-chip__icon {
    color: var(--s-decorative-banana-text);
    background-color: var(--s-decorative-banana-surface-subdued);
  }
}

.file-chip--loading {
  & .file-chip__icon {
    padding: var(--s-space-2);
  }

  & .file-chip__icon {
    background-color: transparent;
  }
}

